# Simple-Task-Queue

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  climain.cpp  config.h.in  global.cpp  global.hpp  guimain.cpp  guimain.qrc  inputdialog.cpp  inputdialog.hpp  inputdialog.ui  logger.cpp  logger.hpp  main.cpp  main.hpp  main.qrc  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  servermain.cpp  stq.cpp  stq_unbuffer.cpp  stqcli.cpp  tasktab.cpp  tasktab.hpp  tasktab.ui
client/: CMakeLists.txt  main.cpp  resources.qrc  simpletaskqueue.desktop  stq.pb.cc  stq.pb.h
client/controller/: addtaskdialog.cpp  addtaskdialog.hpp  donelist.cpp  donelist.hpp  fakeconsole.cpp  fakeconsole.hpp  mainwindow.cpp  mainwindow.hpp  pendinglist.cpp  pendinglist.hpp  queuelist.cpp  queuelist.hpp  settings.cpp  settings.hpp  taskdetailsdialog.cpp  taskdetailsdialog.hpp
client/model/: abstractclient.cpp  abstractclient.hpp  accessimpl.cpp  accessimpl.hpp  donelistmodel.cpp  donelistmodel.hpp  fakeconsolemodel.cpp  fakeconsolemodel.hpp  global.cpp  global.hpp  grpcchannelcreator.cpp  grpcchannelcreator.hpp  grpccommon.cpp  grpccommon.hpp  mainmodel.cpp  mainmodel.hpp  pendinglistmodel.cpp  pendinglistmodel.hpp  queuelistmodel.cpp  queuelistmodel.hpp  settingsmodel.cpp  settingsmodel.hpp  taskdetails.cpp  taskdetails.hpp
client/ui/: SettingsPage.qml  logger.cpp  logger.hpp  logger.ui  loggerdialog.cpp  loggerdialog.hpp  loggerdialog.ui  main.qml  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pendinglist.cpp  pendinglist.ui  queuelist.cpp  queuelist.qml  queuelist.ui  saveconfigdialog.cpp  saveconfigdialog.hpp  saveconfigdialog.ui  settings.cpp  settings.hpp  settings.qml  settingsdata.hpp  settingsdialog.cpp  settingsdialog.hpp  settingsdialog.ui
client/ui/component/: MainMenu.qml  MainToolBar.qml  MenuIcon.qml  TitleText.qml  ToolTipButton.qml
client/view/: addtaskdialog.ui  donelist.ui  fakeconsole.ui  mainwindow.ui  pendinglist.ui  settings.ui  taskdetailsdialog.ui
cmake/: FindGRPC.cmake  FindProtobuf.cmake  ffcli.cmake  ffcontroller.cmake  ffmodel.cmake  ffserver.cmake  flexflowcli.cmake  flexflowgui.cmake  flexflowserver.cmake  getGitInfo.cmake  protoc.cmake  stq.cmake  stqcli.cmake  stqcontroller.cmake  stqgui.cmake  stqmodel.cmake  stqserver.cmake
controller/cli/: args.cpp  args.hpp  config.hpp  global.cpp  global.hpp  main.cpp  main.hpp  queue.cpp  queue.hpp  queuelist.cpp  queuelist.hpp
controller/global/: config.cpp  config.hpp  defines.hpp  global.cpp  global.hpp  init.cpp  init.hpp
controller/grpcserver/: accessimpl.cpp  accessimpl.hpp  config.cpp  config.hpp  init.cpp  init.hpp  queueimpl.cpp  queueimpl.hpp  queuelistimpl.cpp  queuelistimpl.hpp  server.cpp  server.hpp
controller/gui/: clientconfig.cpp  clientconfig.hpp  clientconfiglist.cpp  clientconfiglist.hpp  clientconfigthread.cpp  clientconfigthread.hpp  config.cpp  config.hpp  global.cpp  global.hpp  hostinfo.hpp  log.cpp  log.hpp  logsink.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.hpp  queuelist.hpp  remoteclient.cpp  remoteclient.hpp  serverconfig.cpp  serverconfig.hpp  waitforinit.cpp  waitforinit.hpp
model/: alias.hpp  errmsg.cpp  errmsg.hpp  iprocess.cpp  iprocess.hpp  posixprocess.cpp  posixprocess.hpp  task.cpp  task.hpp  utils.cpp  utils.hpp  winprocess.cpp  winprocess.hpp
model/dao/: dirutils.cpp  dirutils.hpp  grpcconnect.cpp  grpcconnect.hpp  grpcqueue.cpp  grpcqueue.hpp  grpcqueuelist.cpp  grpcqueuelist.hpp  grpcutils.cpp  grpcutils.hpp  iconnect.cpp  iconnect.hpp  iqueue.hpp  iqueuelist.hpp  sqliteconnect.cpp  sqliteconnect.hpp  sqlitequeue.cpp  sqlitequeue.hpp  sqlitequeuelist.cpp  sqlitequeuelist.hpp
model/global/: config.cpp  config.hpp  defines.hpp  init.cpp  init.hpp
model/proc/: iproc.cpp  iproc.hpp  linuxproc.cpp  linuxproc.hpp  posixproc.cpp  posixproc.hpp  task.cpp  task.hpp  winproc.cpp  (+1 more)
posthandler/: posthandler.h
protos/: access.proto  console.proto  done.proto  pending.proto  queue.proto  queuelist.proto  types.proto
server/: CMakeLists.txt  build.cmd  build.sh  common.hpp  config.example.json  global.cpp  global.hpp  go.mod  go.sum  logger.hpp  main.cpp  main.go  test.cpp
server/controller/: accessimpl.cpp  accessimpl.hpp  consoleimpl.cpp  consoleimpl.hpp  doneimpl.cpp  doneimpl.hpp  implcommon.cpp  init.go  pendingimpl.cpp  pendingimpl.hpp  queueimpl.cpp  queueimpl.hpp  stq.grpc.pb.cpp  stq.grpc.pb.hpp
server/controller/grpc/: accessimpl.cpp  accessimpl.go  accessimpl.hpp  consoleimpl.cpp  consoleimpl.go  doneimpl.cpp  doneimpl.go  doneimpl.hpp  implcommon.hpp  init.go  pendingimpl.cpp  pendingimpl.go  pendingimpl.hpp  queueimpl.cpp  queueimpl.go  queueimpl.hpp  utils.go
server/controller/restful/: init.go
server/controller/restful/access/: access.go
server/controller/restful/console/: console.go
server/controller/restful/done/: done.go
server/controller/restful/pending/: pending.go
server/controller/restful/queue/: queueimpl.go
server/controller/restful/types/: types.go
server/model/: global.go  init.go  prockiller.go  prockiller_win32.go  stqqueue.cpp  stqqueue.hpp  stqqueuelist.cpp  stqqueuelist.hpp  stqtask.cpp  stqtask.hpp  stringutils.cpp  stringutils.hpp  task.go  taskheap.go  taskqueue.go  taskqueuelist.go  totp.cpp  totp.hpp
server/model/process/: abstractprocess.cpp  abstractprocess.hpp  nixprocess.cpp  nixprocess.hpp  winprocess.cpp  winprocess.hpp
server/process/: abstractprocess.cpp  abstractprocess.hpp  nixprocess.cpp  nixprocess.hpp  winprocess.hpp
server/restfulserver/: abstractserver.cpp  abstractserver.hpp  httputils.cpp  httputils.hpp  raxadapter.cpp  raxadapter.hpp  winserver.cpp  winserver.hpp
server/utils/: checkAdmin.go  checkRoot.go  configparser.go
server/view/cli/: cliqueue.go  cliqueuelist.go  utils.go
server/win32-code/: getopt_long.c
view/: about.cpp  about.hpp  about.qml  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  configform.cpp  configform.hpp  configform.ui  main.cpp  main.hpp  main.qml  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settings.cpp  settings.hpp  settings.qml  stqgui.qrc
(+29 files in other folders)
